tests/NormalTests/paczka1/fuzzy1/37638401.err
Error in line 2: Ns9Vl A714 12,9
Error in line 4: IkVhRSIXz A419 1c,5
Error in line 3: Ns9Vl A419 16,6
Error in line 16: Ob15e A45 18,3
Error in line 18: Ob15e A19 30,3
Error in line 30: MLQ2ciEOx2k A714 66,0
